--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ body {
   margin: 0px;
   padding: 0px;
   background-image: url(assets/images/background-desktop.png);
+  background-color: transparent;
+  background-repeat: no-repeat;
   color: white;
+  background-size: cover;
 }
 
 img {
