--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Outfit:wght@100..900&family=Young+Serif&display=swap');
 
 /* The problem is that -> I don't know how to add the pattern line and circle and the other's background thing's. */
+
+/* I am having isssues with adding the side images don't know how to add it. and import it. 
+Well i have never be good at the image property and also don't know how to use it properly. */
 body {
   margin: 0px;
   padding: 0px;
