first commit(seted the two images)

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Well i have never be good at the image property and also don't know how to use i
 body {
   margin: 0px;
   padding: 0px;
-  background-image: url(assets/images/background-desktop.png);
+  background-image: url(assets/images/background-desktop.png),url(assets/images/pattern-squiggly-line-bottom-desktop.svg),url(assets/images/pattern-squiggly-line-top.svg);
   background-color: transparent;
   background-repeat: no-repeat;
   color: hsl(252, 6%, 83%);
