--- a/style.css
+++ b/style.css
@@ -5,19 +5,27 @@
 /* I am having isssues with adding the side images don't know how to add it. and import it. 
 Well i have never be good at the image property and also don't know how to use it properly. */
 body {
-  margin: 0px;
-  min-height:100vh;
-  background-image: url(assets/images/background-desktop.png),
-  url(assets/images/pattern-squiggly-line-bottom-desktop.svg),
-  url(assets/images/pattern-squiggly-line-top.svg);
-  background-repeat:no-repeat,no-repeat,no-repeat;
-  background-position: left-top,
-  right-top,
-  center center;
-background-size: auto auto cover;
-background-attachment:scroll,scroll,fixed;
+  margin: 0;
+  min-height: 100vh;
+
+  background-image:
+    url('assets/images/background-desktop.png'),
+    url('assets/images/pattern-squiggly-line-bottom-desktop.svg'),
+    url('assets/images/pattern-squiggly-line-top.svg');
+
+  background-repeat: no-repeat, no-repeat, no-repeat;
+
+  background-position:
+    left top,
+    right top,
+    center center;
+
+  background-size: auto, auto, cover;
+
+  background-attachment: scroll, scroll, fixed;
+
   background-color: transparent;
-  background-repeat: no-repeat;
+
   color: hsl(252, 6%, 83%);
   background-size: cover;
   font-family: 'Outfit', sans-serif;
@@ -54,6 +62,17 @@ main {
   height: 150px;
   border: 2px dotted white;
 }
+.fileBorder input {
+  display:none;
+}
+
+.fileBorder img {
+  border:1px solid whitesmoke;
+  border-radius:10px;
+  width:50px;
+  margin:20px 0px;
+  cursor:pointer;
+}
 
 .form {
   display: flex;
@@ -73,12 +92,13 @@ main {
   border-radius: 10px;
   font-size: 16px;
   padding: 15px;
+
 }
 
 .form button {
   padding: 20px;
   margin: 10px 0px;
-  background-color:hsl(7, 88%, 67%);
+  background-color: hsl(7, 88%, 67%);
   color: hsl(248, 70%, 10%);
   border-radius: 10px;
   cursor: pointer;
@@ -88,6 +108,15 @@ main {
   font-size: 20px;
 }
 
-.form button:hover{
-  background-color:hsl(7, 71%, 60%);
+.form button:hover {
+  background-color: hsl(7, 71%, 60%);
+}
+
+
+
+/* Medai query  */
+@media screen and (max-width:375px) {
+  body{
+    background-image: url(assets/images/background-mobile.png);
+  }
 }
